build from local source

--- a/project-spec/configs/config
+++ b/project-spec/configs/config
@@ -25,7 +25,7 @@ CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_EXT__LOCAL__SRC=y
 #
 # External linux-kernel local source settings
 #
-CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_EXT_LOCAL_SRC_PATH="/home/training/Projects/Ultra96v2_wifi_val_2018_2/linux-xlnx-xilinx-v2018.2_wilc3000_15.2rc1/"
+CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_EXT_LOCAL_SRC_PATH="/projects-vm/wilc3000/linux-xlnx"
 
 #
 # Auto Config Settings
@@ -136,7 +136,7 @@ CONFIG_SUBSYSTEM_ENDIAN_LITTLE=y
 #
 # DTG Settings
 #
-CONFIG_SUBSYSTEM_MACHINE_NAME="zcu100-revc"
+CONFIG_SUBSYSTEM_MACHINE_NAME="template"
 
 #
 # Kernel Bootargs
@@ -163,7 +163,7 @@ CONFIG_SUBSYSTEM_ZYNQMP_PRELOADED_BL33_BASE=0x8000000
 #
 CONFIG_SUBSYSTEM_UBOOT_CONFIG_PETALINUX=y
 # CONFIG_SUBSYSTEM_UBOOT_CONFIG_OTHER is not set
-CONFIG_SUBSYSTEM_UBOOT_CONFIG_TARGET="xilinx_zynqmp_zcu102_rev1_0_defconfig"
+CONFIG_SUBSYSTEM_UBOOT_CONFIG_TARGET="xilinx_zynqmp_zcu100_revC_defconfig"
 CONFIG_SUBSYSTEM_NETBOOT_OFFSET=0x10000000
 CONFIG_SUBSYSTEM_U__BOOT_TFTPSERVER_IP="AUTO"
 
